; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_v360.c_get_rorder.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_v360.c_get_rorder.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@YAW = common dso_local global i32 0, align 4
@PITCH = common dso_local global i32 0, align 4
@ROLL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8)* @get_rorder to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_rorder(i8 signext %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8, align 1
  store i8 %0, i8* %3, align 1
  %4 = load i8, i8* %3, align 1
  %5 = sext i8 %4 to i32
  switch i32 %5, label %12 [
    i32 89, label %6
    i32 121, label %6
    i32 80, label %8
    i32 112, label %8
    i32 82, label %10
    i32 114, label %10
  ]

6:                                                ; preds = %1, %1
  %7 = load i32, i32* @YAW, align 4
  store i32 %7, i32* %2, align 4
  br label %13

8:                                                ; preds = %1, %1
  %9 = load i32, i32* @PITCH, align 4
  store i32 %9, i32* %2, align 4
  br label %13

10:                                               ; preds = %1, %1
  %11 = load i32, i32* @ROLL, align 4
  store i32 %11, i32* %2, align 4
  br label %13

12:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %13

13:                                               ; preds = %12, %10, %8, %6
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
